Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignObjectNumberField.quorum
class Main
    Object v = Test()
    action Main
    end

    action Test() returns Object
        number var = 5.0
        return var
    end
end